--- a/swagger/api.yaml
+++ b/swagger/api.yaml
@@ -12,6 +12,28 @@ consumes:
 produces:
   - application/json
 definitions:
+  Shipment:
+    $ref: ./definitions/shipment.yaml#/Shipment
+  ShipmentMarket:
+    $ref: ./definitions/shipment.yaml#/ShipmentMarket
+  Move:
+    $ref: ./definitions/move.yaml#/Move
+  DutyStation:
+    $ref: ./definitions/move.yaml#/DutyStation
+  SelectedMoveType:
+    $ref: ./definitions/move.yaml#/SelectedMoveType
+  MoveStatus:
+    $ref: ./definitions/move_status.yaml#/MoveStatus
+  ServiceMember:
+    $ref: ./definitions/service_member.yaml#/ServiceMember
+  Affiliation:
+    $ref: ./definitions/service_member.yaml#/Affiliation
+  ServiceMemberRank:
+    $ref: ./definitions/service_member_rank.yaml#/ServiceMemberRank
+  BackupContactPermission:
+    $ref: ./definitions/service_member.yaml#/BackupContactPermission
+  ServiceMemberBackupContact:
+    $ref: ./definitions/service_member.yaml#/ServiceMemberBackupContact
   MoveDocuments:
     type: array
     items:
@@ -344,47 +366,7 @@ definitions:
       - quantity_1
       - location
   Address:
-    type: object
-    properties:
-      street_address_1:
-        type: string
-        example: 123 Main Ave
-        title: Address Line 1
-      street_address_2:
-        type: string
-        example: Apartment 9000
-        x-nullable: true
-        title: Address Line 2
-      street_address_3:
-        type: string
-        example: Montmârtre
-        x-nullable: true
-        title: Address Line 3
-      city:
-        type: string
-        example: Anytown
-        title: City
-      state:
-        title: State
-        type: string
-        example: CA
-      postal_code:
-        type: string
-        description: zip code, international allowed
-        format: zip
-        title: ZIP/Postal Code
-        example: "'90210' or 'N15 3NL'"
-      country:
-        type: string
-        title: Country
-        x-nullable: true
-        example: 'USA'
-        default: USA
-    required:
-      - street_address_1
-      - state
-      - city
-      - postal_code
+    $ref: ./definitions/address.yaml#/Address
   IndexBlackoutsPayload:
     type: array
     items:
@@ -412,7 +394,7 @@ definitions:
       channel:
         $ref: '#/definitions/Channel'
       market:
-        $ref: '#/definitions/ShipmentMarket'
+        $ref: ./definitions/shipment.yaml#/ShipmentMarket
       code_of_service:
         $ref: '#/definitions/CodeOfService'
     required:
@@ -450,7 +432,7 @@ definitions:
       channel:
         $ref: '#/definitions/Channel'
       market:
-        $ref: '#/definitions/ShipmentMarket'
+        $ref: ./definitions/shipment.yaml#/ShipmentMarket
       code_of_service:
         $ref: '#/definitions/CodeOfService'
     required:
@@ -593,61 +575,11 @@ definitions:
         type: string
         example: Johnson
   GBLOC:
-    type: string
-    description: Office Codes for Transcom offices originating GBLs
-    pattern: '^[A-Z]{4}$'
-    example: LHNQ
-    x-nullable: true
+    $ref: ./definitions/gbloc.yaml#/GBLOC
   IndexShipments:
     type: array
     items:
       $ref: '#/definitions/Shipment'
-  Move:
-    type: object
-    properties:
-      selected_move_type:
-        $ref: '#/definitions/SelectedMoveType'
-      orders_id:
-        type: string
-        format: uuid
-        example: c56a4180-65aa-42ec-a945-5fd21dec0538
-      has_dependents:
-        type: boolean
-        title: Are dependents included in your orders?
-        default: false
-      spouse_has_pro_gear:
-        type: boolean
-        title: Do you have a spouse who will need to move items related to their occupation (also known as spouse pro-gear)?
-        default: false
-      status:
-        $ref: '#/definitions/MoveStatus'
-      locator:
-        type: string
-        example: '12432'
-      cancel_reason:
-        type: string
-        example: 'Change of orders'
-        x-nullable: true
-      new_duty_station:
-        $ref: '#/definitions/DutyStation'
-    required:
-      - orders_id
-      - locator
-  MoveStatus:
-    type: string
-    title: Move status
-    enum:
-      - DRAFT
-      - SUBMITTED
-      - APPROVED
-      - COMPLETED
-      - CANCELED
-    x-display-value:
-      DRAFT: Draft
-      SUBMITTED: Submitted
-      APPROVED: Approved
-      COMPLETED: Completed
-      CANCELED: Canceled
   MoveDocumentType:
     type: string
     title: Document Type
@@ -684,24 +616,6 @@ definitions:
       FIREARMS_CHAIN_OF_CUSTODY: Firearms chain of custody
       PHOTO: Photo
       OTHER: Other document type
-  SelectedMoveType:
-    type: string
-    title: Selected Move Type
-    enum:
-      - HHG
-      - PPM
-      - UB
-      - POV
-      - NTS
-      - HHG_PPM
-    x-nullable: true
-    x-display-value:
-      HHG: Household Goods Move
-      PPM: Personal Procured Move
-      UB: Unaccompanied Baggage
-      POV: Privately-Owned Vehicle
-      NTS: Non-Temporary Storage
-      HHG_PPM: Both HHG and PPM
   ServiceAgentRole:
     type: string
     title: Service Agent Role
@@ -711,225 +625,12 @@ definitions:
     x-display-value:
       ORIGIN: Origin
       DESTINATION: Destination
-  ServiceMemberRank:
-    type: string
-    x-nullable: true
-    title: Rank
-    enum:
-      - E_1
-      - E_2
-      - E_3
-      - E_4
-      - E_5
-      - E_6
-      - E_7
-      - E_8
-      - E_9
-      - O_1_W_1_ACADEMY_GRADUATE
-      - O_2_W_2
-      - O_3_W_3
-      - O_4_W_4
-      - O_5_W_5
-      - O_6
-      - O_7
-      - O_8
-      - O_9
-      - O_10
-      - AVIATION_CADET
-      - CIVILIAN_EMPLOYEE
-      - ACADEMY_CADET_MIDSHIPMAN
-    x-display-value:
-      E_1: E-1
-      E_2: E-2
-      E_3: E-3
-      E_4: E-4
-      E_5: E-5
-      E_6: E-6
-      E_7: E-7
-      E_8: E-8
-      E_9: E-9
-      O_1_W_1_ACADEMY_GRADUATE: O-1/W-1/Service Academy Graduate
-      O_2_W_2: O-2/W-2
-      O_3_W_3: O-3/W-3
-      O_4_W_4: O-4/W-4
-      O_5_W_5: O-5/W-5
-      O_6: O-6
-      O_7: O-7
-      O_8: O-8
-      O_9: O-9
-      O_10: O-10
-      AVIATION_CADET: Aviation Cadet
-      CIVILIAN_EMPLOYEE: Civilian Employee
-      ACADEMY_CADET_MIDSHIPMAN: Service Academy Cadet/Midshipman
-  Affiliation:
-    type: string
-    x-nullable: true
-    title: Branch of service
-    enum: &AFFILIATION
-      - ARMY
-      - NAVY
-      - MARINES
-      - AIR_FORCE
-      - COAST_GUARD
-    x-display-value:
-      ARMY: Army
-      NAVY: Navy
-      MARINES: Marines
-      AIR_FORCE: Air Force
-      COAST_GUARD: Coast Guard
-  DutyStation:
-    type: object
-    properties:
-      id:
-        type: string
-        format: uuid
-        example: c56a4180-65aa-42ec-a945-5fd21dec0538
-      name:
-        type: string
-        format: string
-        example: Fort Bragg North Station
-      address:
-        $ref: '#/definitions/Address'
-      created_at:
-        type: string
-        format: date-time
-      updated_at:
-        type: string
-        format: date-time
-    required:
-      - id
-      - name
-      - address
-      - created_at
-      - updated_at
-  ServiceMember:
-    type: object
-    properties:
-      first_name:
-        type: string
-        example: John
-        x-nullable: true
-        title: First Name
-      middle_name:
-        type: string
-        example: L.
-        x-nullable: true
-        title: Middle Name
-      last_name:
-        type: string
-        example: Donut
-        x-nullable: true
-        title: Last Name
-      edipi:
-        type: string
-        format: edipi
-        example: '5789345789'
-        pattern: '^[0-9]{10}$'
-        x-nullable: true
-        title: DoD ID number
-      affiliation:
-        $ref: '#/definitions/Affiliation'
-        title: Branch
-      rank:
-        $ref: '#/definitions/ServiceMemberRank'
-        title: Rank
-      suffix:
-        type: string
-        example: Jr.
-        x-nullable: true
-        title: Suffix
-      telephone:
-        type: string
-        format: telephone
-        pattern: '^[2-9]\d{2}-\d{3}-\d{4}$'
-        example: 212-555-5555
-        x-nullable: true
-        title: Best Contact Phone
-      secondary_telephone:
-        type: string
-        format: telephone
-        pattern: '^[2-9]\d{2}-\d{3}-\d{4}$'
-        example: 212-555-5555
-        x-nullable: true
-        title: Secondary Phone
-      personal_email:
-        type: string
-        format: x-email
-        pattern: '^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$'
-        example: john_bob@example.com
-        x-nullable: true
-        title: Personal Email Address
-      phone_is_preferred:
-        type: boolean
-        x-nullable: true
-        title: Telephone
-      text_message_is_preferred:
-        type: boolean
-        x-nullable: true
-        title: Text Message - Coming Soon!
-      email_is_preferred:
-        type: boolean
-        x-nullable: true
-        title: Email
-      backup_contacts:
-        $ref: '#/definitions/IndexServiceMemberBackupContacts'
   IndexServiceMemberBackupContacts:
     type: array
     items:
       $ref: '#/definitions/ServiceMemberBackupContact'
   ServiceMemberBackupContact:
-    type: object
-    properties:
-      id:
-        type: string
-        format: uuid
-        example: c56a4180-65aa-42ec-a945-5fd21dec0538
-      name:
-        type: string
-        example: Susan Smith
-        x-nullable: true
-        title: Name
-      telephone:
-        type: string
-        format: telephone
-        pattern: '^[2-9]\d{2}-\d{3}-\d{4}$'
-        example: 212-555-5555
-        x-nullable: true
-        title: Phone
-      email:
-        type: string
-        format: x-email
-        pattern: '^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$'
-        example: john_bob@example.com
-        x-nullable: true
-        title: Email
-      permission:
-        $ref: '#/definitions/BackupContactPermission'
-      created_at:
-        type: string
-        format: date-time
-      updated_at:
-        type: string
-        format: date-time
-    required:
-      - id
-      - created_at
-      - updated_at
-      - name
-      - email
-      - permission
-  BackupContactPermission:
-    type: string
-    title: Backup Contact Permissions
-    example: VIEW
-    enum:
-      - NONE
-      - VIEW
-      - EDIT
-    x-display-value:
-      NONE: Contact Only
-      VIEW: View all move details
-      EDIT: View and edit all move details
+    $ref: ./definitions/service_member.yaml#/ServiceMemberBackupContact
   TrafficDistributionList:
     type: object
     properties:
@@ -949,244 +650,6 @@ definitions:
       - source_rate_area
       - destination_region
       - code_of_service
-  Shipment:
-    type: object
-    properties:
-      id:
-        type: string
-        format: uuid
-        example: c56a4180-65aa-42ec-a945-5fd21dec0538
-        readOnly: true
-      status:
-        $ref: '#/definitions/ShipmentStatus'
-        readOnly: true
-      source_gbloc:
-        $ref: '#/definitions/GBLOC'
-        readOnly: true
-      destination_gbloc:
-        $ref: '#/definitions/GBLOC'
-        readOnly: true
-      gbl_number:
-        type: string
-        example: 'KKFA9999999'
-        x-nullable: true
-        title: GBL Number
-      market:
-        $ref: '#/definitions/ShipmentMarket'
-        readOnly: true
-      created_at:
-        type: string
-        format: date-time
-      updated_at:
-        type: string
-        format: date-time
-      traffic_distribution_list:
-        $ref: '#/definitions/TrafficDistributionList'
-        readOnly: true
-      service_member:
-        $ref: '#/definitions/ServiceMember'
-        readOnly: true
-      move:
-        $ref: '#/definitions/Move'
-        x-nullable: true
-      book_date:
-        type: string
-        format: date
-        example: '2018-04-26'
-        readOnly: true
-        x-nullable: true
-      requested_pickup_date:
-        type: string
-        format: date
-        example: '2018-04-26'
-        x-nullable: true
-      original_delivery_date:
-        type: string
-        format: date
-        example: '2018-04-26'
-        readOnly: true
-        x-nullable: true
-      original_pack_date:
-        type: string
-        format: date
-        example: '2018-04-26'
-        readOnly: true
-        x-nullable: true
-      actual_pickup_date:
-        type: string
-        format: date
-        example: '2018-04-26'
-        readOnly: true
-        x-nullable: true
-      actual_pack_date:
-        type: string
-        format: date
-        example: '2018-04-26'
-        readOnly: true
-        x-nullable: true
-      actual_delivery_date:
-        type: string
-        format: date
-        example: '2018-04-26'
-        readOnly: true
-        x-nullable: true
-      estimated_pack_days:
-        description: Estimated days packing
-        type: integer
-        minimum: 0
-        example: 3
-        readOnly: true
-        x-nullable: true
-      estimated_transit_days:
-        description: Estimated days in transit
-        type: integer
-        minimum: 0
-        example: 30
-        readOnly: true
-        x-nullable: true
-      pickup_address:
-        $ref: '#/definitions/Address'
-        x-nullable: true
-      has_secondary_pickup_address:
-        type: boolean
-        default: false
-        title: 'Do you have household goods at any other pickup location?'
-      secondary_pickup_address:
-        $ref: '#/definitions/Address'
-        x-nullable: true
-      has_delivery_address:
-        type: boolean
-        default: false
-        title: 'Do you know the delivery address at destination yet?'
-      delivery_address:
-        $ref: '#/definitions/Address'
-        x-nullable: true
-      has_partial_sit_delivery_address:
-        type: boolean
-        default: false
-        title: 'Will some of your items be stored in transit?'
-      partial_sit_delivery_address:
-        $ref: '#/definitions/Address'
-        x-nullable: true
-      weight_estimate:
-        type: integer
-        description: Estimated weight of the shipment in lbs
-        minimum: 0
-        example: 10000
-        x-nullable: true
-        x-formatting: weight
-        title: Weight Estimate
-      progear_weight_estimate:
-        type: integer
-        description: Estimated weight of the progear in lbs
-        minimum: 0
-        example: 500
-        x-nullable: true
-        x-formatting: weight
-        title: Progear Weight Estimate
-      spouse_progear_weight_estimate:
-        type: integer
-        description: Estimated weight of the spouse progear in lbs
-        minimum: 0
-        example: 200
-        x-nullable: true
-        x-formatting: weight
-        title: Spouse Progear Weight Estimate
-      net_weight:
-        type: integer
-        description: Actual net weight of the shipment in lbs
-        minimum: 0
-        example: 10000
-        x-nullable: true
-        x-formatting: weight
-        title: Net
-      gross_weight:
-        type: integer
-        description: Gross weight of the shipment in lbs
-        minimum: 0
-        example: 10000
-        x-nullable: true
-        x-formatting: weight
-        title: Gross
-      tare_weight:
-        type: integer
-        description: Tare weight of the shipment in lbs
-        minimum: 0
-        example: 10000
-        x-nullable: true
-        x-formatting: weight
-        title: Tare
-      pm_survey_completed_at:
-        type: string
-        format: date-time
-        x-nullable: true
-      pm_survey_conducted_date:
-        type: string
-        format: date
-        example: '2018-04-26'
-        title: 'Conducted'
-        x-nullable: true
-      pm_survey_planned_pack_date:
-        type: string
-        format: date
-        example: '2018-04-26'
-        title: 'Planned pack date'
-        x-nullable: true
-      pm_survey_planned_pickup_date:
-        type: string
-        format: date
-        example: '2018-04-26'
-        title: 'Planned pickup date'
-        x-nullable: true
-      pm_survey_planned_delivery_date:
-        type: string
-        format: date
-        example: '2018-04-26'
-        title: 'Planned delivery date'
-        x-nullable: true
-      pm_survey_weight_estimate:
-        type: integer
-        minimum: 0
-        example: 10000
-        title: Weight
-        x-nullable: true
-        x-formatting: weight
-      pm_survey_progear_weight_estimate:
-        type: integer
-        minimum: 0
-        example: 10000
-        title: Pro-Gear weight
-        x-nullable: true
-        x-formatting: weight
-      pm_survey_spouse_progear_weight_estimate:
-        type: integer
-        minimum: 0
-        example: 10000
-        title: Spouse's pro-gear
-        x-nullable: true
-        x-formatting: weight
-      pm_survey_notes:
-        type: string
-        example: This document is good to go!
-        format: textarea
-        x-nullable: true
-        title: Notes about dates
-      pm_survey_method:
-        type: string
-        title: Survey method
-        enum:
-          - IN_PERSON
-          - PHONE
-          - VIDEO
-        x-display-value:
-          IN_PERSON: In person
-          PHONE: Phone
-          VIDEO: Video
-      transportation_service_provider_id:
-        type: string
-        format: uuid
-        example: c56a4180-65aa-42ec-a945-5fd21dec0538
-        readOnly: true
   TransportationServiceProvider:
     type: object
     properties:
@@ -1417,41 +880,6 @@ definitions:
         type: string
         format: date
         example: 2018-03-15
-  ShipmentMarket:
-    type: string
-    description: One of the possible 'Markets' for a shipment
-    example: dHHG
-    enum:
-      - dHHG
-      - iHHG
-      - iUB
-    x-display-value:
-      dHHG: Domestic HHG
-      iHHG: International HHG
-      iUB: International unaccompanied baggage
-    x-nullable: true
-  ShipmentStatus:
-    type: string
-    description: The stages in the lifecycle of a Shipment
-    example: IN_PROGRESS
-    enum: &SHIPMENTSTATUS
-      - DRAFT
-      - SUBMITTED
-      - AWARDED
-      - ACCEPTED
-      - APPROVED
-      - IN_TRANSIT
-      - DELIVERED
-      - COMPLETED
-    x-display-value:
-      DRAFT: Draft
-      SUBMITTED: Submitted
-      AWARDED: Awarded
-      ACCEPTED: Accepted
-      APPROVED: Approved
-      IN_TRANSIT: In Transit
-      DELIVERED: Delivered
-      COMPLETED: Completed
   TransportPayload:
     type: object
     properties:
@@ -1915,7 +1343,15 @@ paths:
           type: array
           items:
             type: string
-            enum: *SHIPMENTSTATUS
+            enum:
+              - DRAFT
+              - SUBMITTED
+              - AWARDED
+              - ACCEPTED
+              - APPROVED
+              - IN_TRANSIT
+              - DELIVERED
+              - COMPLETED
           collectionFormat: csv
           description: Restrict the list to shipments with matching ShipmentStatus
         - name: order_by
