--- a/load_testing/requirements.txt
+++ b/load_testing/requirements.txt
@@ -1,3 +1,6 @@
+attrs==19.1.0
+bravado==10.3.1
+bravado-core==5.10.1
 certifi==2018.11.29
 chardet==3.0.4
 Click==7.0
@@ -7,11 +10,27 @@ greenlet==0.4.15
 idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10
+jsonpointer==2.0
+jsonref==0.2
+jsonschema==3.0.1
 locustio==0.9.0
 MarkupSafe==1.1.0
+monotonic==1.5
 msgpack==0.6.0
+msgpack-python==0.5.6
+pycodestyle==2.5.0
+pyrsistent==0.14.11
+python-dateutil==2.8.0
+pytz==2018.9
+PyYAML==3.13
 pyzmq==17.1.2
 requests==2.21.0
+rfc3987==1.3.8
+simplejson==3.16.0
 six==1.12.0
+strict-rfc3339==0.7
+swagger-spec-validator==2.4.3
+typing-extensions==3.7.2
 urllib3==1.24.1
+webcolors==1.8.1
 Werkzeug==0.14.1
