Add gbl_number to required list.

--- a/swagger/internal.yaml
+++ b/swagger/internal.yaml
@@ -2322,6 +2322,7 @@ definitions:
       - ppm_status
       - hhg_status
       - locator
+      - gbl_number
       - customer_name
       - edipi
       - rank
